--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -46,6 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#FFD300"
+            android:checked="true"
             android:text="@string/priority_2"
             android:textSize="16sp" />
 
